crates/rcc_driver/tests/ui/parse/mismatched_paren.stderr
Error: expected `)` to close parenthesised expression
   ╭─[ crates/rcc_driver/tests/ui/parse/mismatched_paren.c:1:15 ]
   │
 1 │ int x = (1 + 2;
   │         ┬     ─  
   │         ╰──────── unmatched `(` here
───╯
